syntax = "proto3";

package fs.base.authenticate;

import "zskparker.com/foundation/base/pb/base.proto";

service Authenticate {

    rpc New (Authorize) returns (NewResponse);

    rpc Check (CheckRequest) returns (fs.base.Response);

}

message CheckRequest {
    string token = 1;
    string userAgent = 2;
    string ip = 3;
    string clientId = 4;
    string device = 5;
}

message NewResponse {
    fs.base.State state = 1;
    string refreshToken = 2;
    string accessToken = 3;
    string timestamp = 4;
}

message Authorize {
    string userId = 1;
    string timestamp = 2;
    string appId = 3;
    string projectId = 4;
    string device = 5;
    int64 platform = 6;
    string userAgent = 7;
    string ip = 8;
    string token = 9;
    string id = 10;
    string ab = 11; //缩写
}